src/objects/Calificacion__c.object
<CustomObject>
    <customHelpPage>calificacion</customHelpPage>
    <description>Sistema de validación financiera del cliente para otorgar un crédito.</description>
    <fields>
        <fullName>Aportes_de_recursos_propios__c</fullName>
        <label>Aportes de recursos propios</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calificacion__c</fullName>
        <description>Resultado de la calificación</description>
        <label>Calificación</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capacidad_de_pago__c</fullName>
        <description>Se refiere al indicador de capacidad de pago calculado por fábrica de crédito en el momento de análisis.</description>
        <label>Capacidad de pago</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Creditos_cerrados__c</fullName>
        <description>Número de créditos cerrados</description>
        <label>Créditos cerrados</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disponible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Verifica si este usuario ya fué calificado en los últimos 60 días</description>
        <label>Disponible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Edad__c</fullName>
        <description>Edad del cliente</description>
        <label>Edad</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Edad_menor_a_30_vigentes_cerrados__c</fullName>
        <description>Si la edad del cliente es superior a 30 años el valor del campo es cero. En caso contrario es la suma de la edad, los créditos vigentes y los cerrados.</description>
        <formula>if(Edad__c &lt; 30, Edad__c +  N_mero_de_cr_ditos_vigentes__c +  Creditos_cerrados__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edad &lt; 30 + vigentes + cerrados</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eximido_de_calificacion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eximido de calificación</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Informacion_comite__c</fullName>
        <label>Información comité</label>
        <referenceTo>Informacion_comite__c</referenceTo>
        <relationshipLabel>Calificaciones</relationshipLabel>
        <relationshipName>Calificaciones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>N_mero_de_cr_ditos_vigentes__c</fullName>
        <label>Número de créditos vigentes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_de_Consultas__c</fullName>
        <description>Número de consultas con el sector financiero y cooperativo.</description>
        <inlineHelpText>Número de consultas con el sector financiero y cooperativo.</inlineHelpText>
        <label>Número de Consultas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Porcentaje_de_utilizacion_tc__c</fullName>
        <description>Saldo / Cupo</description>
        <label>% utilización tarjeta de credito</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Relacion_cuota_ingreso__c</fullName>
        <label>Relación cuota ingreso</label>
        <precision>17</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Calificación</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Nombre de Calificación</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calificaciones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>